--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-come!!
+<script src="https://www.amcharts.com/lib/4/core.js"></script>
+<script src="https://www.amcharts.com/lib/4/maps.js"></script>
+<script src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
+<div id="chartdiv"></div>
+<p>
+  SELECT:
+  <a onclick="selectCountry('US')">United States</a>
+  <a onclick="selectCountry('BR')">Brazil</a>
+  <a onclick="selectCountry('FR')">France</a>
+  <a onclick="selectCountry('CN')">China</a>
+  <a onclick="selectCountry('AU')">Australia</a>
+</p>
